# GL-FPS

./: CMakeLists.txt  README.md  setup.iss
assets/maps/: maps1.json
assets/texture/: loader.json
libs/d3d/: README.md  d3d.cpp  d3d.h  font.hpp
libs/freeglut/: README
src/: globals.cpp  globals.h  loader.cpp  loader.h  main.cpp  player.cpp  player.h  renderer.cpp  renderer.h
src/map/: map.1.cpp  map.ex.cpp
src/objects/: enemy.cpp  enemy.hpp  magazine.cpp  magazine.hpp  medkit.cpp  medkit.hpp
src/utils/: map_manager.cpp  map_manager.hpp  map_system.hpp  notify.cpp  notify.h
src/wrapper/: audio.cpp  audio.hpp  d3d.cpp  d3d.h  font.hpp
static/: index.html  page.html
